# FDTD

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
doc/: Finite_difference_heat_equation
src/: .heat_fdtd_1d.cpp.swp  .heat_fdtd_1d.hpp.swp  a_garder?_heat_fdtd.cpp  heat_fdtd_1d.cpp  heat_fdtd_1d.hpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
test/unit_test/: .test_fdtd_h1d.cpp.swp  TestPSave.txt  fdtd_test  test_fdtd_h1d.cpp
